--- a/pom.xml
+++ b/pom.xml
@@ -1112,6 +1112,12 @@
 				<artifactId>maven-jxr-plugin</artifactId>
 				<version>2.3</version>
 			</plugin>
+			<!--This plugin is conflicting-->
+			<!--<plugin>-->
+				<!--<groupId>org.apache.maven.plugins</groupId>-->
+				<!--<artifactId>maven-jxr-plugin</artifactId>-->
+				<!--<version>2.3</version>-->
+			<!--</plugin>-->
 		</plugins>
 	</reporting>
 
